completed the date picker component

--- a/datepicker.html
+++ b/datepicker.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <h1>First DatePicker</h1>
-    <div id="datepicker1"></div>
+    <div id="datepicker1" class="datepicker"></div>
     <h1>Second DatePicker</h1>
-    <div id="datepicker2"></div>
+    <div id="datepicker2" class="datepicker"></div>
     <script type="text/javascript" src="DatePicker.js"></script>
     <script type="text/javascript">
       // <![CDATA[
